# notstandingblocks

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  automake.recipe  config.h  configure  configure.ac  init.sh
nsb/: Makefile  config.h  configure  configure.ac
nsb/include/: block.h  blockswindow.h  game.h  gameaudio.h  gameengine.h  gamegraphics.h  gameresc.h  map.h  menutest1.h  nextblockwindow.h  scorewindow.h
nsb/src/: Makefile  Makefile.am  block.cpp  blockswindow.cpp  game.cpp  gameaudio.cpp  gameengine.cpp  gamegraphics.cpp  gameresc.cpp  main.cpp  map.cpp  menutest1.cpp  nextblockwindow.cpp  scorewindow.cpp  struktur
othersrc/: Makefile  Makefile.am  bootstrap  config.h  configure  configure.ac
othersrc/include/: border.h  box.h  colorsurf.h  dialog.h  functions.h  selector.h  textbox.h
othersrc/src/: Makefile  Makefile.am  border.cpp  box.cpp  colorsurf.cpp  dialog.cpp  selector.cpp  textbox.cpp  texttest.old
sce.commons/: Makefile  Makefile.am  config.h  configure  configure.ac  libcmd
sce.commons/include/: fps.h  gc.h  gcnode.h  graphicobject.h  linkedlist.h  lliterator.h  log.h  node.h  point.h  resources.h  sprite.h
sce.commons/src/: Makefile  Makefile.am  fps.cpp  graphicobject.cpp  log.cpp  point.cpp  resources.cpp  sprite.cpp
sce.commons/src/gc/: gbcl.cpp  gcnode.cpp
sce.commons/src/linkedlist/: linkedlist.cpp  lliterator.cpp  node.cpp
sce.drivers/: Makefile  config.h  configure  configure.ac
sce.drivers/include/: audiodriver.h  graphicdriver.h  input.h
sce.drivers/src/: Makefile  Makefile.am  audiodriver.cpp  graphicdriver.cpp  input.cpp
sce.drivers/test/: make.sh  test1.cpp  test1.h
