#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([NotStandingBlocks], [devel], [christoffer@eliesen.no])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(nsb,devel)
AC_PREREQ([2.60])
AM_CONFIG_HEADER(config.h)
#AC_CONFIG_SRCDIR([src/hello.cpp])


# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_OUTPUT(Makefile src/Makefile)
AC_OUTPUT(Makefile)
