#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libSCE_drivers], [devel], [christoffer@eliesen.no])
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(libSCE_drivers,devel)
AC_PREREQ([2.60])
AM_CONFIG_HEADER(config.h)
AC_CONFIG_SRCDIR([src/graphicdriver.cpp])


# Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
