## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES		= -I../include -I../../sce.drivers/include

noinst_LIBRARIES = libSCE_others.a
#libSCE_commons_a_SOURCES = fps.cpp graphicobject.cpp log.cpp point.cpp resources.cpp sprite.cp gc/gbcl.cpp gc/gcnode.cpp linkedlist/linkedlist.cpp linkedlist/lliterator.cpp linkedlist/node.cpp
libSCE_others_a_SOURCES = border.cpp box.cpp colorsurf.cpp dialog.cpp selector.cpp textbox.cpp
#libSCE_commons_a_LIBADD = ../../sce.drivers/src/libSCE_drivers.a

###libSCE_commons_a_LIBADD = -lSDL -lSDL_mixer -lSDL_ttf -lSDL_image
